envuassu/nextcloud/kustomize/nextcloud-aio-clamav-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-aio-clamav
  namespace: envuassu
spec:
  template:
    spec:
      containers:
        - name: nextcloud-aio-clamav
          imagePullPolicy: IfNotPresent
      volumes:
        - name: nextcloud-aio-clamav
          persistentVolumeClaim:
            claimName: nextcloud-aio-clamav-ceph
