envuassu/nextcloud/kustomize/nextcloud-aio-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-aio-database
  namespace: envuassu
spec:
  template:
    spec:
      priorityClassName: mdapi-critical
      containers:
        - name: nextcloud-aio-database
          imagePullPolicy: IfNotPresent
      volumes:
        - name: nextcloud-aio-database-dump
          persistentVolumeClaim:
            claimName: nextcloud-aio-database-dump-ceph
