envuassu/nextcloud/kustomize/nextcloud-aio-talk-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-aio-talk-public
  namespace: envuassu
spec:
  loadBalancerIP: 192.168.1.41
